2008-01-15  Benjamin Mack  <mack@xnos.org>

	* (cleanup) #6958: added comments in t3lib_htmlmail.php, used foreach and some better variable namings
	* (bugfix) #5482:t3lib_htmlmail.php is now initialized with empty variables

2008-01-15	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #5660: Wrong HTTP Header on Domain Redirect (fix by Jeff Segars)

2008-01-15  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #7122: IRRE - Implement TYPO3AJAX handler for Inline Relational Record Editing
	* (feature) Added feature #2797: Add return value to t3lib_htmlmail::send (thanks to Steffen Kamper)
	* (minor) Fixed bug #7126: IRRE - Child records are shown floated and not as blocks in Safari
	* (cleanup) Removed typo3/alt_doc_ajax.php (former AJAX handler of IRRE)

2008-01-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7138: RTE is not rendered in Tabs
	* Added feature #6845: Make preserving DIV sections a configurable RTE processing option

2008-01-14  Ingo Renner  <ingo@typo3.org>

	* fixed #6932: Unlike the default preview language, fields of additionalPreviewLanguages are shown if they are empty. credits Helmut Ummel

2008-01-11  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* htmlArea RTE: Update manual and version to 1.6.4dev

2008-01-11  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #7124: Add some more functionality to new AJAX interface in the TYPO3 back-end

2008-01-10  Benjamin Mack  <mack@xnos.org>

	* (feature) Added #7096: Consistent interface for AJAX calls in the TYPO3 Backend

2008-01-10  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #5421: Problem ignoring extension constraints
	* Fixed bug #7105: Default value of image_orient is invalid (Thanks to Steffen Kamper)

2008-01-09  Benjamin Mack  <mack@xnos.org>

	* (cleanup) Fixed #6957: Removed bottom button panel in alt_doc.php
	* (feature) Added #6995 CSH text is now displayed with CSS hover when in icon mode (Thanks to Chris Lindenmueller)
